tests/unit-fail-compilation/j036b.c
#include <limits.h>
int main(void) {
      INT_MAX + 1;
      return 0;
}
